# darpahaptics

./: .gitignore.txt  README.md
Create_haptic_features/: bld_2horiz.py  bld_2vert.py  bld_large.py  bld_small.py  draw_bands.py  draw_bushes.py  example.py  make_band.py  make_global_display.py  person.py
HapticDisplay/: HelloTanvas.sln  person_position.txt
HapticDisplay/HelloTanvas/: App.xaml  App.xaml.cs  HelloTanvas.csproj  MainWindow.xaml  MainWindow.xaml.cs
Haptic_display/: bld_2horiz.py  bld_2vert.py  bld_large.py  bld_small.py  example2.py  person.py  person_position.txt  touch_locations.txt
Haptic_display/HelloTanvas/: App.xaml  App.xaml.cs  HelloTanvas.csproj  MainWindow.xaml.cs
TCPcommunication/TCPserver/: TCPserver.sln
TCPsocket/TCPserver/: main.cpp  threaded-server.cpp
TouchDetection/directcontrol/: directcontrol.sln
TouchDetection/ergodicinput/: ergodicinput.sln
TouchDetection/sharedcontrol/: sharedcontrol.sln
TouchDetection/training/: training.sln
TouchDetection/waypointinput/: waypointinput.sln
TouchDetection_UWPcs/: TouchDetection_UWPcs.sln
TouchDetection_UWPcs/TouchDetection_UWPcs/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  TouchDetection_UWPcs.csproj
Touch_detection/: Cpp_app.sln
Touch_detection/Cpp_app/: App.xaml  App.xaml.cpp  App.xaml.h  Cpp_app.vcxproj  MainPage.xaml  (+4 more)
user_input/: CMakeLists.txt  package.xml
user_input/msg/: input_array.msg  input_location.msg  object_position.msg  person_position.msg
user_input/src/: client.cpp  client_directcontrol.cpp  client_sharedcontrol.cpp  test_publish.cpp
(+59 files in other folders)
